--- a/EclipseProg/Scouthis/res/values/strings.xml
+++ b/EclipseProg/Scouthis/res/values/strings.xml
@@ -21,4 +21,5 @@
 
     <string name="demo_external_activity">Collegamento esterno</string>
     <string name="demo_collection">Altro layout di prova</string>
+    <string name="app_id">754990904532470</string>
 </resources>
