--- a/EclipseProg/Scouthis/res/values/strings.xml
+++ b/EclipseProg/Scouthis/res/values/strings.xml
@@ -26,5 +26,15 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="app_id">754990904532470</string>
+    
+    <string name="undo">UNDO</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="scegli_ora">A che ora?</string>
+    <string name="scegli_giorni">Quali giorni NON suonerà</string>
+    <string name="scegli_uccello">Che uccello ti sveglierà?</string>
+    
+    
 
 </resources>
