--- a/EclipseProg/Scouthis/res/values/strings.xml
+++ b/EclipseProg/Scouthis/res/values/strings.xml
@@ -12,7 +12,7 @@
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
-  limitations under the License.
+  limitations under the License.
 -->
 
 <resources>
@@ -26,7 +26,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="app_id">754990904532470</string>
-    
     <string name="undo">UNDO</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
@@ -34,7 +33,6 @@
     <string name="scegli_ora">A che ora?</string>
     <string name="scegli_giorni">Quali giorni NON suonerà</string>
     <string name="scegli_uccello">Che uccello ti sveglierà?</string>
-    
-    
+    <string name="title_activity_prova_time_picker">ProvaTimePicker</string>
 
 </resources>
