--- a/EclipseProg/Scouthis/res/values/strings.xml
+++ b/EclipseProg/Scouthis/res/values/strings.xml
@@ -12,7 +12,7 @@
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
-  limitations under the License.
+  limitations under the License.
 -->
 
 <resources>
@@ -35,5 +35,6 @@
     <string name="scegli_uccello">Che uccello ti sveglierà?</string>
     <string name="title_activity_prova_time_picker">ProvaTimePicker</string>
     <string name="title_activity_prova_pickerss">ProvaPickerss</string>
+    <string name="title_activity_dialog_float">DialogFloat</string>
 
 </resources>
